public class Curso {

	private uuid[] cursoID;

	private String metodologia;

	private int numHorasAulaCurso;

	private String duracaoCurso;

	private String[] descricao;

	private Matricula matricula;

	private Matricula matricula;

}
